--- a/src/Components/Input/Details.css
+++ b/src/Components/Input/Details.css
@@ -4,9 +4,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10px;
+  padding: 15px;
   font-size: 10px;
-  margin-top: 6px;
+  margin-top: 8px;
 }
 select,
 input {
@@ -38,6 +38,12 @@ textarea {
   height: 40px;
   letter-spacing: 1px;
 }
+#add_address:hover {
+  background-color: #2e6adf;
+  color: white;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
+    rgba(17, 17, 26, 0.1) 0px 0px 8px;
+}
 .inputStack_Uploadfile {
   flex: 1;
   justify-content: space-between;
@@ -55,8 +61,11 @@ textarea {
   width: 100%;
 }
 .Bottom_buttons {
-  float: right;
-  margin-top: -30px;
+  display: flex;
+  justify-content: end;
+  background-color: white;
+  width: 100%;
+  padding: 2%;
 }
 .Bottom_buttons button {
   margin-right: 10px;
@@ -84,6 +93,11 @@ textarea {
   font-size: 58px;
   height: 40px;
   padding-right: 10px;
-color: rgb(169, 180, 180);
+  color: rgb(169, 180, 180);
   padding-left: 10px;
-  background-color: rgb(221, 217, 212);}
+  background-color: rgb(221, 217, 212);
+}
+
+@media (max-width: 680px) {
+  /* CSS rules for responsive design*/
+}
